--- a/src/components/TidesWidget/TidesWidget.module.scss
+++ b/src/components/TidesWidget/TidesWidget.module.scss
@@ -44,11 +44,11 @@
 .stale {
 	margin: $space-3 0 0;
 	font-size: 0.8rem;
-	color: rgba(255, 255, 255, 0.7);
+	color: #fff;
 	font-style: italic;
 }
 
 .empty {
 	margin: 0;
-	color: rgba(255, 255, 255, 0.85);
+	color: #fff;
 }
